Add fair last-place tournaments
